# aws-config-generator

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  config.toml  config.toml.example  config.toml.orig  templates
.github/workflows/: linux.yml  mac.yml  push.yml
examples/templates/: basic_profile.txt  hub_role.txt  profile_with_script.txt
src/: configgen.rs  lib.rs  main.rs
src/configgen/: arg_parsing.rs  config.rs  generate.rs
templates/: config_file.j2
