[package]
name = "aws-config-generator"
version = "0.1.0"
authors = ["Alan Jenkins <alan.james.jenkins@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.55"
aws-sdk-organizations = "0.28"
aws-sdk-sts = "0.28"
clap = "4"
color-eyre = "0.6"
dirs = "5"
futures-util = "0.3"
indoc = "2.0.3"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.17", features = ["full"] }
tokio-stream = "0.1"
toml = "0.7"
