[package]
name = "aws_config_generator"
version = "0.1.0"
authors = ["Alan Jenkins <alan.james.jenkins@gmail.com>"]
edition = "2021"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
aws-config = "1.0.0"
aws-sdk-organizations = "1.0.0"
aws-sdk-sts = "1.0.0"
clap = "4.0"
dirs = "6.0"
lazy_static = "1.4.0"
tera = "1.17.1"
tokio = { version = "1.24", features = ["full"] }
toml = "0.9"
